[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "1"
path = "src/1/bin/main.rs"

[[bin]]
name = "2"
path = "src/2/bin/main.rs"

[[bin]]
name = "3"
path = "src/3/bin/main.rs"

[[bin]]
name = "4"
path = "src/4/bin/main.rs"

[dependencies]
