[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "1"
path = "src/1/bin/1.rs"

[[bin]]
name = "2"
path = "src/2/bin/2.rs"

[[bin]]
name = "9"
path = "src/9/bin/9.rs"

[[bin]]
name = "10"
path = "src/10/bin/10.rs"

[dependencies]
